--- a/src/assets/components/Tasks/Tasks.scss
+++ b/src/assets/components/Tasks/Tasks.scss
@@ -1,16 +1,56 @@
 .tasks {
-    padding: 60px;
+    padding: 20px 50px 0px 50px;
    &__items {
         &-row {
             display: flex;
             align-items: center;
             justify-content: space-between;
-            margin-bottom: 15px;
+            margin-bottom: 10px;
             input.task {
                 flex: 1;
                 border: none;
                 padding-left: 10px;
             }
+            $main: &;
+            &:hover {
+               #{$main}-actions {
+                    opacity: 1
+                }
+            }
+
+            &-actions {
+                display: flex;
+                opacity: 0;
+                transition: opacity 0.15s ease-in-out;
+                
+                div {
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  width: 32px;
+                  height: 32px;
+                  background-color: lighten(#f4f6f8, 2%);
+                  border-radius: 6px;
+                  margin-left: 5px;
+                  cursor: pointer;
+        
+                  &:hover {
+                    background-color: darken(#f4f6f8, 2%);
+                    svg {
+                      opacity: 0.9;
+                    }
+                  }
+        
+                  svg {
+                    width: 11px;
+                    height: 11px;
+                    opacity: 0.4;
+                  }
+                }
+              }
+
+             
+
         }
         h2 {
             position: absolute;
@@ -75,4 +115,14 @@
        }
      
     }
+
+   
+
+    p {
+        margin-left: 15px;
+        border: 0;
+        font-size: 16px;
+        width: 100%;
+    }
+    
 }
